--- a/ClotheOurKids.Web/Views/Home/Index.cshtml
+++ b/ClotheOurKids.Web/Views/Home/Index.cshtml
@@ -31,16 +31,8 @@
             }
         }
 
-        .full-bg-img {
+        /*.full-bg-img {
             color: #fff;
-        }
-
-        /*.view {
-            background: url("../../Content/img/bg/child-girl-happy.jpg")no-repeat center center fixed;
-            -webkit-background-size: cover;
-            -moz-background-size: cover;
-            -o-background-size: cover;
-            background-size: cover;
         }*/
 
         footer.page-footer {
@@ -73,15 +65,54 @@
             cursor: hand;
         }
 
+        #map-canvas {
+            height: 100%;
+            position: absolute;
+            top: 106px;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            z-index: 0;
+        }
+
+        @@media (min-width: 1199px){
+            #map-canvas {
+                top: 106px;
+                height: calc(100vh - 106px);
+            }
+
+            #mainLogo {
+                top: 106px;
+            }
+        }
+
         @@media (max-width: 1199px) and (min-width: 992px) {
             .view {
                 height: calc(100vh - 125px);
             }
+
+            #map-canvas {
+                top: 125px;
+                height: calc(100vh - 125px);
+            }
+
+            #mainLogo {
+                top: 125px;
+            }
         }
 
         @@media (max-width: 992px) {
-            .view {
+            .view {                
                 height: calc(100vh - 163px);
+            }
+
+            #map-canvas {
+                top: 162px;
+                height: calc(100vh - 162px);
+            }
+
+            #mainLogo {
+                top: 162px;
             }
         }
 
@@ -97,37 +128,34 @@
 
 @section headerMask
 {
-
-    <!--Mask-->
-    <div class="view jarallax" data-jarallax='{"speed": 0.2}' style="background-image: url('../../Content/img/bg/child-girl-happy.jpg');">
-        <div class="full-bg-img">
-            <div class="mask rgba-black-strong">
-                    <div class="container flex-center">
-                        <ul class="list-unstyled text-center ml-5">
-                            <li>
-                                <h1 class="h1-responsive wow fadeInUp">Clothe Our Kids of North Alabama</h1>
-                            </li>
-                            <li>
-                                <p class="wow fadeInUp" data-wow-delay="0.2s">Giving Clothes. Showing Love. Building Confidence.</p>
-                            </li>
-                            <li>
-                                <a href="@Url.RouteUrl("GetInvolved")" class="btn btn-outline-white btn-lg wow fadeInLeft" data-wow-delay="0.2s"><i class="fa fa-user left"></i> Get involved!</a>
-                                <a href="@Url.RouteUrl("OurWork")" class="btn btn-outline-white btn-lg wow fadeInRight" data-wow-delay="0.2s"><i class="fa fa-book left"></i>Learn more</a>
-                            </li>
-                        </ul> 
-                </div>   
-            </div>            
-        </div>       
-        
+    <div id="mainLogo" class="container justify-content-center align-items-center" style="z-index: 100; position: relative;">
+        <ul class="list-unstyled text-center ml-5">
+            <li>
+                @*<h1 class="h1-responsive wow fadeInUp">Clothe Our Kids of North Alabama</h1>*@
+                <img class="img-fluid" src="~/Content/img/logo/logo3 - black.png" />
+            </li>
+            @*<li>
+                    <p class="wow fadeInUp" data-wow-delay="0.2s">Giving Clothes. Showing Love. Building Confidence.</p>
+                </li>*@
+            @*<li>
+                <a href="@Url.RouteUrl("GetInvolved")" class="btn btn-black btn-rounded btn-lg wow fadeInLeft" data-wow-delay="0.2s"><i class="fa fa-user left"></i> Get involved!</a>
+                <a href="@Url.RouteUrl("OurWork")" class="btn btn-black btn-rounded btn-lg wow fadeInRight" data-wow-delay="0.2s"><i class="fa fa-book left"></i>Learn more</a>
+            </li>*@
+        </ul>
     </div>
-    <!--/.Mask-->
 
-    
+
+    <div id="map-canvas" class="full-bg-img">
+    </div>   
 
 }
 
+   
+
 <!-- Main container-->
 <div class="container" style="z-index: 2000;">
+
+
 
     <!--Section: About Us-->
     <section class="section extra-margins" id="about">
@@ -271,6 +299,9 @@
     <script type="text/javascript">
         function initMap() {
 
+            buildBackgroundMap();
+
+            //CONTACT US MAP
             var var_location = new google.maps.LatLng(34.528204, -86.898599);
 
             var locations = [
@@ -308,6 +339,333 @@
                 })(marker, i));
             }
         }
+
+        function buildBackgroundMap() {
+
+            var map;
+            var polygonField;
+            var centerpoint;
+            var pointMarker;
+
+            var styledMapType = new google.maps.StyledMapType(
+                [
+                    {
+                        "elementType": "geometry",
+                        "stylers": [
+                            {
+                                "color": "#f5f5f5"
+                            }
+                        ]
+                    },
+                    {
+                        "elementType": "labels",
+                        "stylers": [
+                            {
+                                "visibility": "off"
+                            }
+                        ]
+                    },
+                    {
+                        "elementType": "labels.icon",
+                        "stylers": [
+                            {
+                                "visibility": "off"
+                            }
+                        ]
+                    },
+                    {
+                        "elementType": "labels.text.fill",
+                        "stylers": [
+                            {
+                                "color": "#616161"
+                            }
+                        ]
+                    },
+                    {
+                        "elementType": "labels.text.stroke",
+                        "stylers": [
+                            {
+                                "color": "#f5f5f5"
+                            }
+                        ]
+                    },
+                    {
+                        "featureType": "administrative",
+                        "elementType": "geometry",
+                        "stylers": [
+                            {
+                                "visibility": "off"
+                            }
+                        ]
+                    },
+                    {
+                        "featureType": "administrative.land_parcel",
+                        "stylers": [
+                            {
+                                "visibility": "off"
+                            }
+                        ]
+                    },
+                    {
+                        "featureType": "administrative.land_parcel",
+                        "elementType": "labels.text.fill",
+                        "stylers": [
+                            {
+                                "color": "#bdbdbd"
+                            }
+                        ]
+                    },
+                    {
+                        "featureType": "administrative.neighborhood",
+                        "stylers": [
+                            {
+                                "visibility": "off"
+                            }
+                        ]
+                    },
+                    {
+                        "featureType": "poi",
+                        "stylers": [
+                            {
+                                "visibility": "off"
+                            }
+                        ]
+                    },
+                    {
+                        "featureType": "poi",
+                        "elementType": "geometry",
+                        "stylers": [
+                            {
+                                "color": "#eeeeee"
+                            }
+                        ]
+                    },
+                    {
+                        "featureType": "poi",
+                        "elementType": "labels.text.fill",
+                        "stylers": [
+                            {
+                                "color": "#757575"
+                            }
+                        ]
+                    },
+                    {
+                        "featureType": "poi.park",
+                        "elementType": "geometry",
+                        "stylers": [
+                            {
+                                "color": "#e5e5e5"
+                            }
+                        ]
+                    },
+                    {
+                        "featureType": "poi.park",
+                        "elementType": "labels.text.fill",
+                        "stylers": [
+                            {
+                                "color": "#9e9e9e"
+                            }
+                        ]
+                    },
+                    {
+                        "featureType": "road",
+                        "stylers": [
+                            {
+                                "visibility": "off"
+                            }
+                        ]
+                    },
+                    {
+                        "featureType": "road",
+                        "elementType": "geometry",
+                        "stylers": [
+                            {
+                                "color": "#ffffff"
+                            }
+                        ]
+                    },
+                    {
+                        "featureType": "road",
+                        "elementType": "labels.icon",
+                        "stylers": [
+                            {
+                                "visibility": "off"
+                            }
+                        ]
+                    },
+                    {
+                        "featureType": "road.arterial",
+                        "elementType": "labels.text.fill",
+                        "stylers": [
+                            {
+                                "color": "#757575"
+                            }
+                        ]
+                    },
+                    {
+                        "featureType": "road.highway",
+                        "elementType": "geometry",
+                        "stylers": [
+                            {
+                                "color": "#dadada"
+                            }
+                        ]
+                    },
+                    {
+                        "featureType": "road.highway",
+                        "elementType": "labels.text.fill",
+                        "stylers": [
+                            {
+                                "color": "#616161"
+                            }
+                        ]
+                    },
+                    {
+                        "featureType": "road.local",
+                        "elementType": "labels.text.fill",
+                        "stylers": [
+                            {
+                                "color": "#9e9e9e"
+                            }
+                        ]
+                    },
+                    {
+                        "featureType": "transit",
+                        "stylers": [
+                            {
+                                "visibility": "off"
+                            }
+                        ]
+                    },
+                    {
+                        "featureType": "transit.line",
+                        "elementType": "geometry",
+                        "stylers": [
+                            {
+                                "color": "#e5e5e5"
+                            }
+                        ]
+                    },
+                    {
+                        "featureType": "transit.station",
+                        "elementType": "geometry",
+                        "stylers": [
+                            {
+                                "color": "#eeeeee"
+                            }
+                        ]
+                    },
+                    {
+                        "featureType": "water",
+                        "elementType": "geometry",
+                        "stylers": [
+                            {
+                                "color": "#c9c9c9"
+                            }
+                        ]
+                    },
+                    {
+                        "featureType": "water",
+                        "elementType": "labels.text.fill",
+                        "stylers": [
+                            {
+                                "color": "#9e9e9e"
+                            }
+                        ]
+                    }
+                ], { name: "Background Map" });
+
+            centerpoint = new google.maps.LatLng(35.517491, -86.580447);
+
+            var mapOptions = {
+                zoom: 6,
+                center: centerpoint,
+                disableDefaultUI: true,
+                mapTypeControlOptions: {
+                    mapTypeIds: ['background_map']
+                }
+            };
+
+            map = new google.maps.Map(document.getElementById("map-canvas"), mapOptions);
+
+            map.mapTypes.set('background_map', styledMapType);
+            map.setMapTypeId('background_map');
+
+            ShowFusionTables(map);
+
+        }
+
+
+        function ShowFusionTables(map) {
+            
+
+            var countyLayer;
+            var whereClause = "'State-County' IN ('AL-Morgan', 'AL-Lawrence', 'TN-Lincoln', 'TN-Bedford', 'TN-Giles', 'TN-Marshall', 'TN-Lawrence')";
+            //var whereClause = 'GEO_ID = 05000US01083'
+            //var whereClause = '';
+            countyLayer = new google.maps.FusionTablesLayer({
+                map: map,
+                heatmap: { enabled:false },
+                query: {
+                    select: 'geometry',
+                    from: '1xdysxZ94uUFIit9eXmnw1fYc6VcQiXhceFd_CVKa',
+                    where: whereClause
+                },
+                options: {
+                    styleId: 1028,
+                    templateId: 1095                    
+                }
+            });
+            //countyLayer = new google.maps.FusionTablesLayer({
+            //    query: {
+            //        select: 'geometry',
+            //        from: '1xdysxZ94uUFIit9eXmnw1fYc6VcQiXhceFd_CVKa',
+            //        where: whereClause
+            //    },
+            //    styles: [{
+            //        polygonOptions: {
+            //            //fillColor: '#F1081D',
+            //            fillColor: '#82DE21',
+            //            fillOpacity: 0.4,
+            //            visible: true,
+            //            zIndex: 3000
+            //        }
+            //    }]
+            //});     
+
+
+            var stateLayer;
+            stateLayer = new google.maps.FusionTablesLayer({
+                query: {
+                    select: 'geometry',
+                    from: '17aT9Ud-YnGiXdXEJUyycH2ocUqreOeKGbzCkUw'
+                },
+                options: {
+                    styleId: 442,
+                    templateId: 470
+                }
+            });
+            //stateLayer = new google.maps.FusionTablesLayer({
+            //    query: {
+            //        select: 'geometry',
+            //        from: '17aT9Ud-YnGiXdXEJUyycH2ocUqreOeKGbzCkUw'
+            //    },
+            //    styles: [{
+            //        polygonOptions: {
+            //            fillColor: '#FFFFFF',
+            //            strokeColor: '#F2F2F2',
+            //            fillOpacity: 0.1,
+            //            visible: false,
+            //            zIndex: 5
+            //        }
+            //    }]
+            //});
+
+            stateLayer.setMap(map);
+
+        }
+
+
     </script>
 
     <script async defer
@@ -323,11 +681,13 @@
 
             //$('#navbar').addClass('navbar-dark').removeClass('navbar-light');
 
-            setNavbar();
+            //setNavbar();
 
-            $(window).on('resize', function () {
-                setNavbar();
-            });
+            //$(window).on('resize', function () {
+            //    setNavbar();
+            //});
+
+            
 
             $('#OurWork').click(function () {
                 var url = '@Url.RouteUrl("OurWork")';
