Update headings for mdb 4.5

--- a/ClotheOurKids.Web/Content/css/mySkin.css
+++ b/ClotheOurKids.Web/Content/css/mySkin.css
@@ -176,7 +176,7 @@
 
     /*main green color*/
     .kids-skin .bg-light-green, .kids-skin .btn-light-green {
-        background-color: #38bfb3 !important;
+        background-color: #41BEB3 !important;
         color: #fff;
     }
 
