--- a/ClotheOurKids.Web/Views/Donation/GetInvolved.cshtml
+++ b/ClotheOurKids.Web/Views/Donation/GetInvolved.cshtml
@@ -1,6 +1,6 @@
 ﻿<div class="container">
 
-    <section class="section page-top-section mb-4 wow fadeIn" data-wow-delay="0.2s">
+    <section class="section page-top-section mb-5 wow fadeIn" data-wow-delay="0.2s">
         <div class="row">
             <div class="col-12">
                 <h1 class="section-heading mb-2">Get Involved</h1>
@@ -9,13 +9,13 @@
                 <p class="section-description mb-2"><i>help us fulfill our mission</i></p>
             </div>
             <div class="col-12" style="text-align:center;">
-                <span>Share</span>
+                <span class="mt-1">Share</span>
                 <!--Facebook-->
-                <a id="FBShare" type="button" class="ml-3 btn-floating btn-sm btn-fb"><i class="fa fa-facebook"></i></a>
+                <a id="FBShare" type="button" class="ml-2 btn-floating btn-sm btn-fb"><i class="fa fa-facebook"></i></a>
 
                 <!--Twitter-->
                 <a href="https://twitter.com/intent/tweet?url=https%3A%2F%2Fgivekidsclothes.com%2FGet-Involved&hashtags=givekidsclothes&text=Help%20us%20fulfill%20our%20mission."
-                   type="button" class="ml-0 btn-floating btn-sm btn-tw">
+                   type="button" class="ml-1 btn-floating btn-sm btn-tw">
                     <i class="fa fa-twitter"></i>
                 </a>
 
