--- a/ClotheOurKids.Web/Views/OurWork/OurWork.cshtml
+++ b/ClotheOurKids.Web/Views/OurWork/OurWork.cshtml
@@ -1,5 +1,5 @@
 ﻿<div class="container">
-    <section class="section page-top-section mb-4 wow fadeIn" data-wow-delay="0.2s">
+    <section class="section page-top-section mb-5 wow fadeIn" data-wow-delay="0.2s">
         <div class="row">
             <div class="col-12">
                 <h1 class="section-heading mb-2">Our Work</h1>
@@ -8,13 +8,13 @@
                 <p class="section-description mb-2"><i><strong>Giving</strong> clothes. <strong>Showing</strong> love. <strong>Building</strong> confidence.</i></p>
             </div>
             <div class="col-12 flex-center">
-                <span>Share</span>
+                <span class="mt-1">Share</span>
                 <!--Facebook-->
-                <a id="FBShare" type="button" class="ml-3 btn-floating btn-sm btn-fb"><i class="fa fa-facebook"></i></a>
+                <a id="FBShare" type="button" class="ml-2 btn-floating btn-sm btn-fb"><i class="fa fa-facebook"></i></a>
 
                 <!--Twitter-->
                 <a href="https://twitter.com/intent/tweet?url=https%3A%2F%2Fgivekidsclothes.com%2FOur-Work&hashtags=givekidsclothes&text=Learn%20what%20we%20do."
-                   type="button" class="ml-0 btn-floating btn-sm btn-tw">
+                   type="button" class="ml-1 btn-floating btn-sm btn-tw">
                     <i class="fa fa-twitter"></i>
                 </a>
             </div>
