--- a/ClotheOurKids.Web/Views/Shared/_Layout.cshtml
+++ b/ClotheOurKids.Web/Views/Shared/_Layout.cshtml
@@ -73,7 +73,7 @@
                                         <li class="nav-item dropdown btn-group">
                                             <span class="nav-link waves-effect waves-light" id="AboutMeMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">About Us</span>
                                             <div class="dropdown-menu dropdown-primary" aria-labelledby="AboutMeMenu">
-                                                <a class="dropdown-item waves-effect waves-light" href="@Url.RouteUrl("WhoWeAre")">Who We Are</a>
+                                                <a class="dropdown-item waves-effect waves-light" href="@Url.RouteUrl("OurHistory")">Our History</a>
                                                 <a class="dropdown-item waves-effect waves-light" href="@Url.RouteUrl("LeadershipPage")">Leadership</a>
                                                 <a class="dropdown-item waves-effect waves-light" href="@Url.RouteUrl("WhoWeServe")">Who We Serve</a>
                                                 <a class="dropdown-item waves-effect waves-light" href="@Url.RouteUrl("FAQ")">Frequently Asked Questions</a>
@@ -123,7 +123,7 @@
                                 <li><span>About Us</span>
                                     <ul>
                                         <li class="top-level"><a>About Us</a></li>
-                                        <li><a href="@Url.RouteUrl("WhoWeAre")">Who We Are</a></li>
+                                        <li><a href="@Url.RouteUrl("OurHistory")">Our History</a></li>
                                         <li><a href="@Url.RouteUrl("LeadershipPage")">Leadership</a></li>
                                         <li><a href="@Url.RouteUrl("WhoWeServe")">Who We Serve</a></li>
                                         <li><a href="@Url.RouteUrl("FAQ")">Frequently Asked Questions</a></li>
@@ -216,7 +216,7 @@
 
         </header>
 
-        <main class="pt-4 pb-3">
+        <main class="pt-5 pb-4">
             @RenderBody()
         </main>
 
@@ -239,7 +239,7 @@
                     <div class="d-none d-md-block col-md-2 ml-auto">
                         <h5 class="title">About Us</h5>
                         <ul class="list-unstyled">
-                            <li><a href="@Url.RouteUrl("WhoWeAre")">Who We Are</a></li>
+                            <li><a href="@Url.RouteUrl("OurHistory")">Our History</a></li>
                             <li><a href="@Url.RouteUrl("LeadershipPage")">Leadership</a></li>
                             <li><a href="@Url.RouteUrl("WhoWeServe")">Who We Serve</a></li>
                             <li><a href="@Url.RouteUrl("FAQ")">F.A.Q</a></li>
